// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs only render one tab title as selected 1`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        selected={true}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".0"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs only render one tab title as selected 2`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        selected={true}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".1"
    title="Title 2"
  >
    <div
      className="content-2"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs only render one tab title as selected 3`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        selected={false}
      />
    </styled.li>
    <styled.li>
      <styled.a
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        selected={true}
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".2"
    title="Title 3"
  >
    <div
      className="content-3"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs renders only selected tab content 1`] = `[Function]`;
